[gd_scene load_steps=17 format=3 uid="uid://txs3hrwo0esu"]

[ext_resource type="FontFile" uid="uid://btwgtlwanbp4j" path="res://tahoma.ttf" id="1_so4td"]
[ext_resource type="Script" path="res://main_menu.gd" id="2_wimkc"]
[ext_resource type="Texture2D" uid="uid://bgaho2ddp4m4k" path="res://TextMain.png" id="2_xb618"]
[ext_resource type="PackedScene" uid="uid://debuxyyvxdaby" path="res://house.tscn" id="3_x6cqk"]
[ext_resource type="Script" path="res://RotationMap.gd" id="4_sduut"]
[ext_resource type="Script" path="res://MainMusic.gd" id="6_0v4n8"]
[ext_resource type="AudioStream" uid="uid://c1lu2jgwphppt" path="res://MainMusic.wav" id="6_f2f2k"]
[ext_resource type="Texture2D" uid="uid://bsfp0ydqhlkof" path="res://Levels/CityImage.png" id="8_krtk5"]

[sub_resource type="Theme" id="Theme_6g5qx"]
Button/colors/font_color = Color(0.376471, 0.298039, 0.396078, 1)
Button/colors/font_outline_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
Button/constants/outline_size = 5
Button/font_sizes/font_size = 48
Button/fonts/font = ExtResource("1_so4td")

[sub_resource type="Animation" id="Animation_sol0b"]
resource_name = "Move"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextMain:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.65, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(588, 127), Vector2(588, 180), Vector2(588, 127)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xvb48"]
_data = {
"Move": SubResource("Animation_sol0b")
}

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_d7rb6"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_lhe2y"]
sky_material = SubResource("ProceduralSkyMaterial_d7rb6")

[sub_resource type="Environment" id="Environment_w2el4"]
background_mode = 2
sky = SubResource("Sky_lhe2y")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Animation" id="Animation_mvmes"]
resource_name = "Close"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dxlvh"]
_data = {
"Close": SubResource("Animation_mvmes")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = SubResource("Theme_6g5qx")
script = ExtResource("2_wimkc")

[node name="TextMain" type="Sprite2D" parent="."]
position = Vector2(588, 127)
texture = ExtResource("2_xb618")

[node name="Move" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xvb48")
}

[node name="Node3D" type="Node3D" parent="."]
script = ExtResource("4_sduut")

[node name="House" parent="Node3D" instance=ExtResource("3_x6cqk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07513, 0, 0.251699)

[node name="Camera3D" type="Camera3D" parent="Node3D"]
transform = Transform3D(0.756242, 0, 0.654292, 0, 1, 0, -0.654292, 0, 0.756242, 3.04499, 2.38059, 3.74072)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Node3D"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Node3D"]
environment = SubResource("Environment_w2el4")

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_f2f2k")
autoplay = true
script = ExtResource("6_0v4n8")

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 852.0
offset_top = 18.0
offset_right = 1174.0
offset_bottom = 85.0
text = "Правая рука"

[node name="First" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="First"]
layout_mode = 2
offset_left = 439.0
offset_top = 477.0
offset_right = 723.0
offset_bottom = 584.0
tooltip_text = "ыф"
theme_override_colors/font_color = Color(0, 0.984314, 0, 1)
theme_override_colors/font_pressed_color = Color(0.380392, 0.380392, 0.380392, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Play"

[node name="Second" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Second"]
layout_mode = 0
offset_left = 290.0
offset_top = 149.0
offset_right = 913.0
offset_bottom = 609.0
color = Color(0, 0, 0, 0.192157)

[node name="Level1" type="Button" parent="Second/ColorRect"]
layout_mode = 0
offset_left = 163.0
offset_top = 142.0
offset_right = 425.0
offset_bottom = 224.0
text = "Level 1
"

[node name="Tutoril" type="Button" parent="Second/ColorRect"]
layout_mode = 0
offset_left = 163.0
offset_top = 28.0
offset_right = 425.0
offset_bottom = 110.0
text = "Обучение
"

[node name="Level2" type="Button" parent="Second/ColorRect"]
layout_mode = 0
offset_left = 163.0
offset_top = 234.0
offset_right = 425.0
offset_bottom = 316.0
text = "Level 2
"

[node name="Level3" type="Button" parent="Second/ColorRect"]
layout_mode = 0
offset_left = 161.0
offset_top = 344.0
offset_right = 423.0
offset_bottom = 426.0
text = "Level 3
"

[node name="CityImage" type="Sprite2D" parent="."]
modulate = Color(0.443137, 0.352941, 0.552941, 1)
z_index = -1
position = Vector2(642, 368.5)
scale = Vector2(0.66875, 0.678704)
texture = ExtResource("8_krtk5")

[node name="Fade" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dxlvh")
}

[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="First/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Second/ColorRect/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Second/ColorRect/Tutoril" to="." method="_on_tutoril_pressed"]
[connection signal="pressed" from="Second/ColorRect/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Second/ColorRect/Level3" to="." method="_on_level_3_pressed"]
